--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:300');
 
 .App {
   font-family: 'Comfortaa', cursive;
+  font-weight:lighter;
+}
+
+a {
+  text-transform:uppercase;
 }
