--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,22 @@
 
 a {
   text-transform:uppercase;
+  margin:20px;
+}
+
+nav {
+  text-align:center;
+}
+
+/* Component specific */
+
+.home {
+  display:flex;
+  justify-content:space-around;
+  margin:10%;
+  text-align:center;
+}
+
+.home img {
+  height:400px;
 }
