--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 .App {
   font-family: 'Comfortaa', cursive;
   font-weight:lighter;
+  display:flex;
+  justify-content:space-around;
+  align-items:center;
 }
 
 a {
